# GANCC

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile.am  Makefile.in  README.md  configure  configure.ac
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
cc/: Makefile.am
cc/src/: main.c  scanner.l  token.h
common/include/libgancc/: bitflag.h  configuration.h  constructs.h  context.h  lang.h  strtree.h
common/src/: configuration.c  context.c  strtree.c
cpp/: automaton.jff  lexer.c  lexer.h  main.c  makefile  parser.c.bak  parser.h.bak  parser.y
cpp/test/: test.c
gancc/: Makefile.am  Makefile.in
gancc/include/gancc/: config.h  parser.h
gancc/src/: c.l  c.y  lexer.l  main.c  makefile  parser.y  token.h  util.h
gancpp/src/: main.c  pp.l  pp.y
libgancc/include/libgancc/: lang.h  strtree.h
libgancc/src/: strtree.c
test/: test.c
